[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Character/Ghost.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Character/Ghost.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 58.0
height = 46.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 52.0

[node name="Ghost" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.509804, 1, 0.690196, 1 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ghost" type="Sprite" parent="."]
position = Vector2( -17, -2 )
scale = Vector2( 0.0683732, 0.0683732 )
texture = ExtResource( 1 )
flip_h = true

[node name="LightTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
